8/29 @07:00pm: Boilerplate added for printing/initializing the array
8/29 @08:00pm: Memory allocation + 0'ing using calloc() fixed in init_dungeon()
8/30 @02:00pm: Moved screen/dungeon to struct
8/30 @03:00pm: Migrated from global variables to pointers and a structure type for the dungeon
8/30 @03:20pm: Added rooms array in the dungeon
9/01 @05:20pm: Added room placement; need to fix p & d buffer differences and room edge placement
9/01 @06:50pm: Finalized room placement
9/03 @09:20pm: Added first stage of corridor generation
