@@ -1,2 +1,2 @@
-A simple procedural dungeon generator for an 80x21 dungeon.
+A simple procedural dungeon generator for an 80x21 dungeon. The approach is exceedingly simplistic for tracing corridors as it relies solely upon a rough calculation of the center of a room and the the displacement x/y from the room being traced from to make a straight pattern. The design may be refined in future releases, time permitting. Room placement is a bruteforce method which relies upon rooms either reaching a provided max number of rooms or a max number of failures.
 
